--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+
   
   <title>Frontend Mentor | Profile card component</title>
 
@@ -12,24 +16,195 @@
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+
+    * {
+      padding: 0;
+      margin: 0;
+    }
+
+    body {
+      background-color: hsl(185, 76%, 39%);
+      overflow: hidden;
+      font-family: 'Kumbh Sans', sans-serif;
+      box-sizing: border-box;
+    }
+
+    /* tło */
+    /* background */
+    section.pudlo {
+      position: relative;
+      width: 100vw;
+      height: 100vh;
+    }
+
+    section svg {
+      position: absolute;
+      z-index: -1;
+    }
+
+    svg:nth-of-type(1) {
+      top: 0;
+      left: 0;
+      /* transform: translate(-50%, -50%); */
+      transform: translate(-70%, -57%);
+    }
+
+    svg:nth-of-type(2) {
+      bottom: 0;
+      right: 0;
+      /* transform: translate(50%, 50%); */
+      transform: translate(63%, 60%);
+    }
+
+    /* pudlo na profil */
+    /* box for profile */
+    div.profil {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 350px;
+      height: 375px;
+      border-radius: 15px;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+    }
+
+    div.profil div.s1 {
+      position: relative;
+      width: 100%;
+      flex-basis: 140px;
+      background-image: url('images/bg-pattern-card.svg');
+    }
+
+    div.profil div.s1 img{
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translate(-50%, 50%);
+      border-radius: 50%;
+      border: 4px solid white;
+    }
+
+    div.profil div.s2 {
+      flex-basis: 140px;
+      text-align: center;
+      background-color: white;
+      border-bottom: 1px solid hsl(0, 0%, 59%);
+    }
+
+    div.profil div.s2 div {
+      margin-top: 70px;
+    }
+
+    div.profil div.s2 h1,
+    div.profil div.s2 h2 {
+      display: inline;
+      font-size: 18px;
+      line-height: 30px;
+    }
+
+    h1, h3 {
+      font-weight: 700;
+      color: hsl(229, 23%, 23%);
+    }
+
+    h3 {
+      transform: translateY(30px);
+    }
+
+    p {
+      line-height: 20px;
+    }
+
+    div.s3 p {
+      font-size: 12px;
+      letter-spacing: 2PX;
+    }
+
+    h2, p {
+      font-weight: 400;
+      color: hsl(227, 10%, 46%);
+    }
+
+    div.profil div.s3 {
+      padding-left: 25px;
+      flex-grow: 1;
+      display: grid;
+      width: 100%;
+      grid-template-columns:100px 100px 100px;
+      grid-template-rows: 2fr 2fr;
+      grid-template-areas: 
+        "hfirst hsecond hthird"
+        "pfirst psecond pthird";
+      background-color: white;
+      text-align: center;
+    }
+
+    div.s3 h3:nth-of-type(1) {
+      grid-area: hfirst;
+    }
+
+    div.s3 h3:nth-of-type(2) {
+      grid-area: hsecond;
+    }
+
+    div.s3 h3:nth-of-type(3) {
+      grid-area: hthird;
+    }
+
+    div.s3 p:nth-of-type(1) {
+      grid-area: pfirst;
+    }
+
+    div.s3 p:nth-of-type(2) {
+      grid-area: psecond;
+    }
+
+    div.s3 p:nth-of-type(3) {
+      grid-area: pthird;
+    }
+
+    @media(min-width:1000px) and (orientation: landscape) {
+
+      section.pudlo svg.tlo1 {
+      transform: translate(-50%, -50%);
+      }
+      section.pudlo svg.tlo2 {
+      transform: translate(50%, 50%);
+    }
+    }
+    
+
+
   </style>
 </head>
 <body>
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
+  <section class="pudlo">
+    <svg class="tlo1" width="978" height="978" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient x1="50%" y1=".779%" x2="50%" y2="100%" id="a"><stop stop-color="#0989B4" stop-opacity="0" offset="0%"/><stop stop-color="#53FFEE" offset="99.94%"/></linearGradient></defs><ellipse fill="url(#a)" transform="rotate(-135 489 489)" cx="489" cy="489" rx="489" ry="488" fill-rule="evenodd" opacity=".5"/></svg>
+    <svg class="tlo2" width="978" height="978" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient x1="50%" y1=".779%" x2="50%" y2="100%" id="a"><stop stop-color="#0989B4" stop-opacity="0" offset="0%"/><stop stop-color="#53FFEE" offset="99.94%"/></linearGradient></defs><ellipse fill="url(#a)" transform="scale(1 -1) rotate(45 1669.55 0)" cx="489" cy="489" rx="489" ry="488" fill-rule="evenodd" opacity=".25"/></svg>
+    <div class="profil">
+      <div class="s1">
+        <img src="images/image-victor.jpg" alt="zdjęcie profilowe">
+      </div>
+      <div class="s2">
+        <div><h1>Victor Crest </h1><h2>26</h2></div>
+        <p>London</p>
+      </div>
+      <div class="s3">
+        <h3>80K</h3>
+        <p>Followers</p>
+        <h3>803K</h3>
+        <p>Likes</p>
+        <h3>1.4K</h3>
+        <p>Photos</p>
+      </div>
+    </div>
+  </section>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Paulina</a>.
   </div>
 </body>
 </html>
