--- a/index.html
+++ b/index.html
@@ -8,177 +8,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
-
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Profile card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-
-    * {
-      padding: 0;
-      margin: 0;
-    }
-
-    body {
-      background-color: hsl(185, 76%, 39%);
-      overflow: hidden;
-      font-family: 'Kumbh Sans', sans-serif;
-      box-sizing: border-box;
-    }
-
-    /* tło */
-    /* background */
-    section.pudlo {
-      position: relative;
-      width: 100vw;
-      height: 100vh;
-    }
-
-    section svg {
-      position: absolute;
-      z-index: -1;
-    }
-
-    svg:nth-of-type(1) {
-      top: 0;
-      left: 0;
-      /* transform: translate(-50%, -50%); */
-      transform: translate(-70%, -57%);
-    }
-
-    svg:nth-of-type(2) {
-      bottom: 0;
-      right: 0;
-      /* transform: translate(50%, 50%); */
-      transform: translate(63%, 60%);
-    }
-
-    /* pudlo na profil */
-    /* box for profile */
-    div.profil {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 350px;
-      height: 375px;
-      border-radius: 15px;
-      display: flex;
-      flex-direction: column;
-      overflow: hidden;
-    }
-
-    div.profil div.s1 {
-      position: relative;
-      width: 100%;
-      flex-basis: 140px;
-      background-image: url('images/bg-pattern-card.svg');
-    }
-
-    div.profil div.s1 img{
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      transform: translate(-50%, 50%);
-      border-radius: 50%;
-      border: 4px solid white;
-    }
-
-    div.profil div.s2 {
-      flex-basis: 140px;
-      text-align: center;
-      background-color: white;
-      border-bottom: 1px solid hsl(0, 0%, 59%);
-    }
-
-    div.profil div.s2 div {
-      margin-top: 70px;
-    }
-
-    div.profil div.s2 h1,
-    div.profil div.s2 h2 {
-      display: inline;
-      font-size: 18px;
-      line-height: 30px;
-    }
-
-    h1, h3 {
-      font-weight: 700;
-      color: hsl(229, 23%, 23%);
-    }
-
-    h3 {
-      transform: translateY(30px);
-    }
-
-    p {
-      line-height: 20px;
-    }
-
-    div.s3 p {
-      font-size: 12px;
-      letter-spacing: 2PX;
-    }
-
-    h2, p {
-      font-weight: 400;
-      color: hsl(227, 10%, 46%);
-    }
-
-    div.profil div.s3 {
-      padding-left: 25px;
-      flex-grow: 1;
-      display: grid;
-      width: 100%;
-      grid-template-columns:100px 100px 100px;
-      grid-template-rows: 2fr 2fr;
-      grid-template-areas: 
-        "hfirst hsecond hthird"
-        "pfirst psecond pthird";
-      background-color: white;
-      text-align: center;
-    }
-
-    div.s3 h3:nth-of-type(1) {
-      grid-area: hfirst;
-    }
-
-    div.s3 h3:nth-of-type(2) {
-      grid-area: hsecond;
-    }
-
-    div.s3 h3:nth-of-type(3) {
-      grid-area: hthird;
-    }
-
-    div.s3 p:nth-of-type(1) {
-      grid-area: pfirst;
-    }
-
-    div.s3 p:nth-of-type(2) {
-      grid-area: psecond;
-    }
-
-    div.s3 p:nth-of-type(3) {
-      grid-area: pthird;
-    }
-
-    @media(min-width:1000px) and (orientation: landscape) {
-
-      section.pudlo svg.tlo1 {
-      transform: translate(-50%, -50%);
-      }
-      section.pudlo svg.tlo2 {
-      transform: translate(50%, 50%);
-    }
-    }
-    
-
-
-  </style>
 </head>
 <body>
   <section class="pudlo">
